added file upload support

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <body>
     <div id="root"></div>
     <script src="/src/lib/papaparse.min.js"></script>
+    <script src="/src/lib/xlsx.full.min.js"></script>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
